STAMP: Setting a background color causes color flicker #32126

Closed
opened 2012-07-17 00:30:22 +02:00 by Troy Sobotka · 9 comments

%%%When setting a background opaque color using the Stamp option, the background color deviates from the selected color and flickers to odd tones.%%%

%%%When setting a background opaque color using the Stamp option, the background color deviates from the selected color and flickers to odd tones.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Cannot reproduce on r48999 Linux x64 SVN

Can you provide a .blend and maybe two output files that show the flicker?%%%

%%%Cannot reproduce on r48999 Linux x64 SVN Can you provide a .blend and maybe two output files that show the flicker?%%%
Author

%%%My bad Gottfried. Should have done a little due diligence.

Summary:

It appears the background of the stamp (and likely the foreground?) is not being correctly linearized / de-linearized in the VSE. This can be illustrated by either A) selecting a color for the stamp in the VSE and looking at the result, or B) using alpha overs to illustrate the error.

The attached sample uses a simple background and a simple foreground with alpha. The alpha over image is set to "Convert Float", which, while not linearizing the values, is somehow routing the correct way through the rendering pipeline. The background, which is not converted to float (and is in the uchar format), is rendering the stamp colors incorrectly.

I suspect it has to do with the UChar / Float paths in the Stamp feature?%%%

%%%My bad Gottfried. Should have done a little due diligence. Summary: It appears the background of the stamp (and likely the foreground?) is not being correctly linearized / de-linearized in the VSE. This can be illustrated by either A) selecting a color for the stamp in the VSE and looking at the result, or B) using alpha overs to illustrate the error. The attached sample uses a simple background and a simple foreground with alpha. The alpha over image is set to "Convert Float", which, while not linearizing the values, is somehow routing the correct way through the rendering pipeline. The background, which is not converted to float (and is in the uchar format), is rendering the stamp colors incorrectly. I suspect it has to do with the UChar / Float paths in the Stamp feature?%%%
Author

%%%Looked at the code, and the buf_rectfill_area does a blind fill of a given color (Grr on the blind hard coded color assumption!) so it doesn't pertain to this issue.

From what I can guess it is probably the "Convert Float" feature of the VSE. Guessing, but my hunch is that the rect_float assumption as linear space that the VSE violates (it is actually merely a value/255 sRGB conversion) is somehow bogging up the rendering of the stamp, which is likely expecting correctly linearized color values.%%%

%%%Looked at the code, and the buf_rectfill_area does a blind fill of a given color (Grr on the blind hard coded color assumption!) so it doesn't pertain to this issue. From what I can guess it is probably the "Convert Float" feature of the VSE. Guessing, but my hunch is that the rect_float assumption as linear space that the VSE violates (it is actually merely a value/255 sRGB conversion) is somehow bogging up the rendering of the stamp, which is likely expecting correctly linearized color values.%%%

%%%Only the combination of "premultiply" and "convert float" produces the issue here. Doen't happen if only one of the options is set.

Btw: When rendering the file here, no flicker occurs. Just a change in colors for the first "stamp-bug.png"-strip.%%%

%%%Only the combination of "premultiply" and "convert float" produces the issue here. Doen't happen if only one of the options is set. Btw: When rendering the file here, no flicker occurs. Just a change in colors for the first "stamp-bug.png"-strip.%%%

%%%Bug does not occur when you turn of color management btw...%%%

%%%Bug does not occur when you turn of color management btw...%%%
Author

%%%"Btw: When rendering the file here, no flicker occurs. Just a change in colors for the first "stamp-bug.png"-strip."

That's the flicker. I originally had somewhat misdiagnosed it so my rapid series of strips caused something akin to a flicker.

I believe Sergey is working on gutting the rendering backend on the VSE to fit OCIO under the hood, which should fix this.

"Bug does not occur when you turn of color management btw..."

This would be because the linearization code paths are skipped. Soon this toggle should be removed altogether anyways.%%%

%%%"Btw: When rendering the file here, no flicker occurs. Just a change in colors for the first "stamp-bug.png"-strip." That's the flicker. I originally had somewhat misdiagnosed it so my rapid series of strips caused something akin to a flicker. I believe Sergey is working on gutting the rendering backend on the VSE to fit OCIO under the hood, which should fix this. "Bug does not occur when you turn of color management btw..." This would be because the linearization code paths are skipped. Soon this toggle should be removed altogether anyways.%%%

%%%fixed r49860, font color had the same issue too which is now fixed.%%%

%%%fixed r49860, font color had the same issue too which is now fixed.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32126
No description provided.