fix [#32126] STAMP: Setting a background color causes color flicker

when rendering the sequencer can output float or char buffers which stamp wasn't accounting for.